--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./assets/style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -32,9 +33,11 @@
             <div class="header__logo">Bio with Mira</div>
             <nav class="header__container">
                 <div class="header__item1"><a href="#whoiam" class="link1">Кто я?</a></div>
-                <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></div>
-                <div class="header__item3"><a href="#price" class="link1">Цены</a></div>
-                <div class="header__item4"><a href="#otzivy" class="link1">Успехи учеников</a></div>
+                <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a>
+                </div>
+                <div class="header__item3"><a href="#price" class="link1" onClick="scrollToHal()">Цены</a></div>
+                <div class="header__item4"><a href="#otzivy" class="link1" onClick="scrollToHalf()">Успехи
+                        учеников</a></div>
 
             </nav>
             <nav class="header__mobilecontainer">
