адаптивный текст в десктопе и правка разметки

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                 </div>
             </div>
         </section>
-
+        <section>
         <h2 class="lessons__h2" id="lessons">Занятия со мной</h2>
         <div class="mob__container">
-            <section class="lessons">
+            <div class="lessons">
                 <div class="lessons_img" id="lessons_img"><img src="./assets/images/lessons/platforma.png"
                         alt="Платформа с теорией"></div>
                 <div class="lessons_text">
@@ -106,8 +106,8 @@
                     </ul>
                 </div>
 
-            </section>
-            <section class="lessons2">
+            </div>
+            <div class="lessons2">
                 <div class="video">
                     <h2>Фрагменты видеоуроков</h2>
                     <div class="video__div"><video class="video__video"></video></div><button
@@ -165,7 +165,8 @@
                 </div>
 
 
-            </section>
+            </div>
+        </section>
         </div>
         <section id="price">
             <h2 class="price__h2">Цены</h2>
