--- a/index.html
+++ b/index.html
@@ -92,88 +92,92 @@
             </div>
         </section>
         <section>
-        <h2 class="lessons__h2" id="lessons">Занятия со мной</h2>
-        <div class="mob__container">
-            <div class="lessons">
-                <div class="lessons_img" id="lessons_img"><img src="./assets/images/lessons/platforma.png"
-                        alt="Платформа с теорией"></div>
-                <div class="lessons_text">
-                    <ul class="lessons__ul">
-                        <li>Занятия онлайн в ZOOM</li>
-                        <li>Удобная платформа</li>
-                        <li>Онлайн домашние задания</li>
-                        <li>Поддержка от меня 24/7</li>
-                    </ul>
-                </div>
-
-            </div>
-            <div class="lessons2">
-                <div class="video">
-                    <h2>Фрагменты видеоуроков</h2>
-                    <div class="video__div">
-                        <iframe class="video__video" id="video" src="https://www.youtube.com/embed/GhD_WWGZeuU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                    <div class="video__buttons">
-                        <div class="videobutton__left"><a><img src="./assets/images/lessons/botton_left.png" alt="Влево"
-                            onclick="videobutton_left()"></a></div>
-                        <div class="videobutton__right"><a><img onclick="videobutton_right()"
-                        src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
+            <h2 class="lessons__h2" id="lessons">Занятия со мной</h2>
+            <div class="mob__container">
+                <div class="lessons">
+                    <div class="lessons_img" id="lessons_img"><img src="./assets/images/lessons/platforma.png"
+                            alt="Платформа с теорией"></div>
+                    <div class="lessons_text">
+                        <ul class="lessons__ul">
+                            <li>Занятия онлайн в ZOOM</li>
+                            <li>Удобная платформа</li>
+                            <li>Онлайн домашние задания</li>
+                            <li>Поддержка от меня 24/7</li>
+                        </ul>
                     </div>
-                </div>
-                <div class="teoria">
-                    <h2>Ёмкие и красочные конспекты</h2>
-                    <div class="teoria__container">
-                        <div class="button_left"><a><img src="./assets/images/lessons/botton_left.png" alt="Влево"
-                                    onclick="button_left()"></a></div>
-                        <div class="conspect"><img class="conspect_img" id="conspect"
-                                src="./assets/images/lessons/conspect1.jpeg" alt="Примеры конспектов"></div>
-                        <div class="button_right"><a><img onclick="button_right()"
-                                    src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
-                    </div>
-                </div>
 
-                <div class="teoria__mobil">
-                    <h2>Ёмкие и красочные конспекты</h2>
-                    <div id="carouselExampleIndicators" class="carousel slide teoria__container__mobil"
-                        data-bs-ride="carousel">
-                    
-                        <div class="carousel-inner">
-                            <div class="carousel-item active conspect">
-                                <img src="./assets/images/lessons/conspect1.jpeg" class="d-block w-90 conspect_img"
-                                    alt="Примеры конспектов">
-                            </div>
-                            <div class="carousel-item conspect">
-                                <img src="./assets/images/lessons/conspect2.jpeg" class="d-block w-90 conspect_img"
-                                    alt="Примеры конспектов">
-                            </div>
-                            <div class="carousel-item conspect">
-                                <img src="./assets/images/lessons/conspect3.jpeg" class="d-block w-90 conspect_img"
-                                    alt="Примеры конспектов">
-                            </div>
+                </div>
+                <div class="lessons2">
+                    <div class="video">
+                        <h2>Фрагменты видеоуроков</h2>
+                        <div class="video__div">
+                            <iframe class="video__video" id="video" src="https://www.youtube.com/embed/GhD_WWGZeuU"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </div>
-                        
-                        <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden ">Предыдущий</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Следующий</span>
-                        </button>
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                class="active bg-success" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                aria-label="Slide 2" class="bg-success"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                aria-label="Slide 3" class="bg-success"></button>
+                        <div class="video__buttons">
+                            <div class="videobutton__left"><a><img src="./assets/images/lessons/botton_left.png"
+                                        alt="Влево" onclick="videobutton_left()"></a></div>
+                            <div class="videobutton__right"><a><img onclick="videobutton_right()"
+                                        src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
                         </div>
                     </div>
+                    <div class="teoria">
+                        <h2>Ёмкие и красочные конспекты</h2>
+                        <div class="teoria__container">
+                            <div class="button_left"><a><img src="./assets/images/lessons/botton_left.png" alt="Влево"
+                                        onclick="button_left()"></a></div>
+                            <div class="conspect"><img class="conspect_img" id="conspect"
+                                    src="./assets/images/lessons/conspect1.jpeg" alt="Примеры конспектов"></div>
+                            <div class="button_right"><a><img onclick="button_right()"
+                                        src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
+                        </div>
+                    </div>
+
+                    <div class="teoria__mobil">
+                        <h2>Ёмкие и красочные конспекты</h2>
+                        <div id="carouselExampleIndicators" class="carousel slide teoria__container__mobil"
+                            data-bs-ride="carousel">
+
+                            <div class="carousel-inner">
+                                <div class="carousel-item active conspect">
+                                    <img src="./assets/images/lessons/conspect1.jpeg" class="d-block w-90 conspect_img"
+                                        alt="Примеры конспектов">
+                                </div>
+                                <div class="carousel-item conspect">
+                                    <img src="./assets/images/lessons/conspect2.jpeg" class="d-block w-90 conspect_img"
+                                        alt="Примеры конспектов">
+                                </div>
+                                <div class="carousel-item conspect">
+                                    <img src="./assets/images/lessons/conspect3.jpeg" class="d-block w-90 conspect_img"
+                                        alt="Примеры конспектов">
+                                </div>
+                            </div>
+
+                            <button class="carousel-control-prev " type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden ">Предыдущий</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Следующий</span>
+                            </button>
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active bg-success" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2" class="bg-success"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3" class="bg-success"></button>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
-
-
-            </div>
         </section>
         </div>
         <section id="price">
