Карточки - внесение изменений

--- a/index.html
+++ b/index.html
@@ -198,8 +198,9 @@
                     </div>
                     <div class="card-3 col-md-4 col-12  text-white mb-5 mt-5 pt-3 pb-1" style="max-width: 18rem;">
                         <h5 class="card-title price__h5">Макси-группа</h5>
-                        <div class="card-body"><img src="./assets/images/price/heart.svg" alt="сердце">
-                            <p class="card-text price__text pt-3">3600 ₽ </br>8 занятий</p>
+                        <div class="card-body "><img style="width: 195px ;"
+                                src="./assets/images/price/microskop-big.svg" alt="микроскоп">
+                            <p class="card-text price__text pt-4">3600 ₽ </br>8 занятий</p>
                         </div>
                     </div>
                 </div>
@@ -228,17 +229,17 @@
                                     <p class="card-text price__cardtext2">6900 ₽ </br>8 занятий</p>
                                 </div>
                             </div>
-                            <div class="col-5 pt-3" style="width: 70px ;">
+                            <div class="col-5 pt-2" style="width: 90px ;">
                                 <div class="card-img "><img src="./assets/images/price/cell.svg"
                                         class="img-fluid d-flex justify-content-start " alt="биология"></div>
                             </div>
                         </div>
                     </div>
                     <div class="card-3 mb-5 text-white price-cardmobil__border" style="width: 88vw; height: 110px;">
-                        <div class="row g-0 d-flex justify-content-end">
-                            <div class="col-5 pt-3" style="width: 70px ;">
-                                <div class="card-img"><img src="./assets/images/price/heart.svg"
-                                        class="img-fluid  d-flex justify-content-end " alt="сердце"></div>
+                        <div class="row g-0 d-flex justify-content-end gap-3">
+                            <div class="col-5 pt-3 d-flex justify-content-end" style="width: 80px ;">
+                                <div class="card-img "><img src="./assets/images/price/microskop.svg"
+                                        class="img-fluid  d-flex justify-content-end " alt="микроскоп"></div>
                             </div>
                             <div class="col-7">
                                 <div class="card-body">
@@ -251,7 +252,8 @@
                 </div>
             </div>
             <div class="container-fluid price__buttons">
-                <div class="d-flex justify-content-evenly text-center mt-1"><button type="button"
+                <div class="d-flex justify-content-evenly text-center mt-1">
+                    <button type="button"
                         class="price__button1 btn-dark rounded-pill text-white">Записаться</button><button type="button"
                         class="price__button2 btn-dark rounded-pill text-white">Записаться</button><button type="button"
                         class="price__button3 btn-dark rounded-pill text-white">Записаться</button>
