Карточки - внесение изменений

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     </div>
                     <div class="card-3 col-md-4 col-12  text-white mb-5 mt-5 pt-3 pb-1" style="max-width: 18rem;">
                         <h5 class="card-title price__h5">Макси-группа</h5>
-                        <div class="card-body "><img style="width: 195px ;"
+                        <div class="card-body pt-4"><img style="width: 180px ;"
                                 src="./assets/images/price/microskop-big.svg" alt="микроскоп">
                             <p class="card-text price__text pt-4">3600 ₽ </br>8 занятий</p>
                         </div>
