Ссылки-соцсети готовы

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры"
                             class="mainpage__photo"></div>
                     <div class="stendup stendup_2"></div>
-                    <div id="telegram"><a href='https://t.me/bio_mira1953'><img class="telegram"
+                    <div id="telegram"><a href='https://t.me/nimb_son'><img class="telegram"
                                 src='./assets/images/mainpage/telegram.svg' alt='Кнопка telegram' /></a></div>
-                    <div id="whatsapp"><a href='https://t.me/bio_mira1953'><img class="whatsapp"
+                    <div id="whatsapp"><a href='https://api.whatsapp.com/send?phone=79138104060'><img class="whatsapp"
                                 src='./assets/images/mainpage/whatsapp.svg' alt='Кнопка whatsapp' /></a></div>
                 </div>
             </section>
@@ -134,7 +134,7 @@
                         <div class="teoria__mobil">
                             <h2>Ёмкие и красочные конспекты</h2>
                             <div id="carouselExampleIndicators" class="carousel slide teoria__container__mobil"
-                                data-bs-ride="carousel" style="height: 54vh;">
+                                data-bs-ride="carousel" style="height: 52vh;">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active conspect"><img
                                             src="./assets/images/lessons/conspect1.jpeg"
@@ -273,7 +273,7 @@
                 <div class="otzivy__mobilecontainer">
                     <a href="#" class="otzivy__link1">Видео-отзывы на YouTube</a>
                     <div id="carouselExampleIndicators" class="carousel slide otzivy__keys1 d-flex align-items-center"
-                        data-bs-ride="carousel" style="height: 75vh;">
+                        data-bs-ride="carousel" style="height: 80vh;">
                         <div class="carousel-inner">
                             <div class="carousel-item active conspect"><img src="./assets/images/otzivy/keys1.JPG"
                                     class="d-block w-60 otzivy__keys1_image" alt="Первый отзыв"></div>
