--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-< !DOCTYPE html>
+<!DOCTYPE html>
     <html lang="ru">
 
     <head>
@@ -108,16 +108,18 @@
                     <div class="lessons2">
                         <div class="video">
                             <h2>Фрагменты видеоуроков</h2>
+                            <div class="video__container">
+                                <div class="videobutton__left"><a><img src="./assets/images/lessons/botton_left.png"
+                                    alt="Влево" onclick="videobutton_left()"></a></div>
                             <div class="video__div"><iframe class="video__video" id="video"
                                     src="https://www.youtube.com/embed/GhD_WWGZeuU" title="YouTube video player"
                                     frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe></div>
-                            <div class="video__buttons">
-                                <div class="videobutton__left"><a><img src="./assets/images/lessons/botton_left.png"
-                                            alt="Влево" onclick="videobutton_left()"></a></div>
+                
                                 <div class="videobutton__right"><a><img onclick="videobutton_right()"
                                             src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
+                        
                             </div>
                         </div>
                         <div class="teoria">
