--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <link rel="stylesheet" href="./assets/style/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    </head>
+            <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        </head>
 
     <body>
         <header>
@@ -35,8 +35,8 @@
                 <nav class="header__container">
                     <div class="header__item1"><a href="#whoiam" class="link1">Кто я?</a></div>
                     <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></div>
-                    <div class="header__item3"><a href="#price" class="link1" onClick="scrollToHal()">Цены</a></div>
-                    <div class="header__item4"><a href="#otzivy" class="link1" onClick="scrollToHalf()">Успехи
+                    <div class="header__item3"><a href="#price" class="link1">Цены</a></div>
+                    <div class="header__item4"><a href="#otzivy" class="link1">Успехи
                             учеников</a></div>
                 </nav>
                 <nav class="header__mobilecontainer">
@@ -368,6 +368,8 @@
         <script src="./assets/script/otzivy.js"></script>
         <script src="./assets/script/menu.js"></script>
         <script src="./assets/script/videos.js"></script>
+       
+     
     </body>
 
     </html>
