--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <div><a><img src="./assets/images/otzivy/button_right.png" class="otzivy__buttonright" alt="Вправо"
                                 onclick="rightClick()"></a></div>
                 </div>
-                <div class="otzivy__container2"><a href="#" class="otzivy__link1">Видео-отзывы на YouTube</a><a
+                <div class="otzivy__container2"><a href="https://youtube.com/playlist?list=PLxGLK1wnMjbb9t4-1_OdBG6l15AY1DoR5" class="otzivy__link1">Видео-отзывы на YouTube</a><a
                         href="https://vk.com/album-215271032_285644111" class="otzivy__link2">Еще больше отзывов в
                         VK</a></div>
             </div>
