--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <div class="header" id="header">
-            <div class="header__logo">Bio with Mira</div>
+            <h1 class="header__logo">Bio with Mira</h1>
             <nav class="header__container">
                 <div class="header__item1"><a href="#whoiam" class="link1">Кто я?</a></div>
                 <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></div>
@@ -55,8 +55,8 @@
     <main id="main">
         <section id="mainpage">
             <div class="mainpage">
-                <h1 class="mainpage__text">Мы просто сделаем это: возьмем и подготовимся к ЕГЭ на <span>80+</span>
-                </h1><a href="#tryforfree" class="mainpage__button">Попробовать бесплатно</a>
+                <p class="mainpage__text">Мы просто сделаем это: возьмем и подготовимся к ЕГЭ на <span>80+</span>
+                </p><a href="#tryforfree" class="mainpage__button">Попробовать бесплатно</a>
                 <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры"
                         class="mainpage__photo"></div>
                 <div class="stendup stendup_2"></div>
