--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <div class="header" id="header">
-            <h1 class="header__logo">Bio with Mira</h1>
+            <h1 class="header__logo">Репетитор по биологии ЕГЭ</h1>
             <nav class="header__container">
                 <div class="header__item1"><a href="#whoiam" class="link1">Кто я?</a></div>
                 <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></div>
@@ -247,8 +247,9 @@
                         class="price__button3 btn-dark rounded-pill text-white" role="button">Записаться</a>
                 </div>
             </div>
-            <div class="price__buttonmobil d-flex justify-content-center text-center mt-1"><button type="button"
-                    class="price__button btn-dark rounded-pill text-white">Записаться</button></div>
+            <div class="price__buttonmobil d-flex justify-content-center text-center mt-1">
+                <a href="https://vk.com/uslugi-215271032" class="price__button btn-dark rounded-pill text-white"
+                    role="button">Записаться</a>
         </section>
         <section>
             <div class="otzivy" id="otzivy">
@@ -265,7 +266,9 @@
                     <div><a><img src="./assets/images/otzivy/button_right.png" class="otzivy__buttonright" alt="Вправо"
                                 onclick="rightClick()"></a></div>
                 </div>
-                <div class="otzivy__container2"><a href="https://youtube.com/playlist?list=PLxGLK1wnMjbb9t4-1_OdBG6l15AY1DoR5" class="otzivy__link1">Видео-отзывы на YouTube</a><a
+                <div class="otzivy__container2"><a
+                        href="https://youtube.com/playlist?list=PLxGLK1wnMjbb9t4-1_OdBG6l15AY1DoR5"
+                        class="otzivy__link1">Видео-отзывы на YouTube</a><a
                         href="https://vk.com/album-215271032_285644111" class="otzivy__link2">Еще больше отзывов в
                         VK</a></div>
             </div>
